appId: ${MAESTRO_APP_ID}
---
# Account setup - Demo
# Verifies screen and completes demo setup
# Required env vars:
#   - EMAIL_ADDRESS
#   - ACCOUNT_NAME
#   - USER_NAME

## Verify Account Setup screen
- assertVisible:
    id: "account_setup_email_address_input"

## Run demo account setup
- waitForAnimationToEnd:
    timeout: 500
- tapOn:
    id: "account_setup_email_address_input"
- waitForAnimationToEnd:
    timeout: 500
- inputText: ${EMAIL_ADDRESS}
- tapOn:
    id: "account_setup_next_button"

## Configuration not found - tap next
- tapOn:
    id: "account_setup_next_button"

## Wait for auto-discovery to complete
- waitForAnimationToEnd:
    timeout: 500

## Enter the password --> the test will fail because the Server is '.servername.com' instead of 'servername.com'
- tapOn:
    text: "Password"
- waitForAnimationToEnd:
    timeout: 500
- inputText: "password"
- tapOn:
    id: "account_setup_next_button"

## Wait for server validation
- waitForAnimationToEnd:
    timeout: 3000

## Display options
- tapOn:
    id: "account_setup_display_options_account_name_input"
- eraseText
- inputText: ${ACCOUNT_NAME}
- tapOn:
    id: "account_setup_display_options_display_name_input"
- inputText: ${USER_NAME}
- tapOn:
    id: "account_setup_next_button"

## Sync options
- waitForAnimationToEnd:
    timeout: 500
- tapOn:
    id: "account_setup_next_button"
- waitForAnimationToEnd:
    timeout: 500
