appId: ${MAESTRO_APP_ID}
---
# Toggle "Show contact names" in Display settings

## Open drawer
- tapOn: "Navigate up"

### Open settings
- tapOn:
    text: "Settings"

### Open general settings
- tapOn:
    id: "text"
    index: 0
    text: "General settings"

### Open display settings
- tapOn:
    id: "android:id/title"
    index: 0
    text: "Display"

### Scroll to "Show contact names"
- scrollUntilVisible:
    element:
      id: "android:id/title"
      text: "Show contact names"
    direction: DOWN
    timeout: 10000

## Enable "Show contact names"
- tapOn:
    id: "android:id/title"
    text: "Show contact names"
    checked: "false"

### Close settings
- tapOn: "Navigate up"
- tapOn: "Navigate up"
- tapOn: "Navigate up"
- swipe:
    direction: LEFT
