appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true

## Welcome screen
- tapOn:
    id: "onboarding_welcome_start_button"

## Already using Thunderbird screen
- waitForAnimationToEnd:
    timeout: 800
- tapOn:
    id: "onboarding_migration_new_account_button"

- runFlow:
    file: sign_in_with_configured_account.yml
    env:
        EMAIL_ADDRESS: "johntest5890@gmail.com"
        ACCOUNT_NAME: "Demo Account"
        DISPLAY_NAME: "Demo User"

# Permissions
- waitForAnimationToEnd:
    timeout: 800
- runFlow:
    when:
      visible:
        id: "onboarding_permissions_next_button"
    commands:
        - tapOn:
            id: "onboarding_permissions_next_button"

- waitForAnimationToEnd:
    timeout: 500
