appId: ${MAESTRO_APP_ID}
---

## Open drawer
- tapOn: "Navigate up"

### Open settings
- tapOn:
    text: "Settings"

### Open general settings
- tapOn:
    id: "net.thunderbird.android.beta:id/text"
    index: 0
    text: "General settings"

### Open display settings
- tapOn:
    id: "android:id/title"
    index: 0
    text: "Display"


### Open drawer
#- tapOn:
#    point: 10%,10%
#
#### Open settings
#- tapOn:
#    point: 10%,90%
#
#### Open general settings
#- tapOn:
#    id: "net.thunderbird.android.beta:id/text"
#    index: 0
#
#### Open display settings
#- tapOn:
#    id: "android:id/title"
#    index: 0
