# use env to provide properties:
# env:
#    EMAIL_ADDRESS: "johntest5890@gmail.com"
#    ACCOUNT_NAME: "Demo Account"
#    DISPLAY_NAME: "Demo User"

appId: ${MAESTRO_APP_ID}
---
## Auto-discovery screen
- waitForAnimationToEnd:
    timeout: 500
- tapOn:
    id: "account_setup_email_address_input"
- waitForAnimationToEnd:
    timeout: 800
- inputText: ${EMAIL_ADDRESS}
- tapOn:
    id: "account_setup_next_button"

## Configuration was found - sign in with google
- tapOn:
    text: "Sign in with Google"

## Grant access to your Google Account
- runFlow:
    file: ../shared/grant_google_account_access.yml

## Wait for auto-discovery to complete
- waitForAnimationToEnd:
    timeout: 1500

## Display options
- longPressOn:
    id: "account_setup_display_options_account_name_input"
- runFlow:
    label: Select All
    when:
      visible: 'Select All'
    commands:
      - tapOn: 'Select All'
      - eraseText: 1
- inputText: ${ACCOUNT_NAME}
- tapOn:
    id: "account_setup_display_options_display_name_input"
- inputText: ${DISPLAY_NAME}
- tapOn:
    id: "account_setup_next_button"

## Sync options
- waitForAnimationToEnd:
    timeout: 500
- tapOn:
    id: "account_setup_next_button"
- waitForAnimationToEnd:
    timeout: 500
