appId: net.thunderbird.android.beta
#maestro test quality/maestro-flows/validate/emulator_message_details_show_contact_names.yml
---
## Open an email, save the sender to contacts and then delete that contact
- runFlow:
    file: ../shared/onboard_with_configured_account.yml
    env:
        EMAIL_ADDRESS: "johntest5890@gmail.com"
        ACCOUNT_NAME: "Demo Account"
        DISPLAY_NAME: "Demo User"
    when:
      visible:
        id: "onboarding_welcome_start_button"

## Open message
- scrollUntilVisible:
    element:
      id: "net.thunderbird.android.beta:id/subject"
      text: "Message details demo"
    direction: DOWN
- tapOn:
    id: "net.thunderbird.android.beta:id/subject"
    text: "Message details demo"

## Check message
- assertVisible:
    id: "net.thunderbird.android.beta:id/from"
    text: "Rogoz Anamaria"
#- assertVisible:
#    id: "net.thunderbird.android.beta:id/recipient_names"
#    text: "to me"

## Open message details
- runFlow: ../shared/open_message_details.yml

## Check message details
- assertVisible:
    id: "net.thunderbird.android.beta:id/name"
    text: "Rogoz Anamaria"
#- assertVisible:
#    id: "net.thunderbird.android.beta:id/name"
#    text: "me"

## Add contacts
- runFlow:
    file: ../shared/add_contact.yml
    when:
      visible:
        id: "net.thunderbird.android.beta:id/menu_add_contact"
    env:
      NAME: Rogoz
      FIRST_NAME: Anamaria
#- runFlow:
#    file: ../shared/add_contact.yml
#    when:
#      visible:
#        id: "net.thunderbird.android.beta:id/menu_add_contact"
#    env:
#      NAME: me

## Close message details
- runFlow: ../shared/close_message_details.yml

## Go back to Inbox
- tapOn:
    id: "com.android.systemui:id/back"

## Change settings
- runFlow: ../shared/change_display_settings_show_contact_names.yml

## Open message
- scrollUntilVisible:
    element:
      id: "net.thunderbird.android.beta:id/subject"
      text: "Message details demo"
    direction: DOWN
- tapOn:
    id: "net.thunderbird.android.beta:id/subject"
    index: 0
    text: "Message details demo"

### Open message details
- runFlow: ../shared/open_message_details.yml

### Check message details
- assertVisible:
    id: "net.thunderbird.android.beta:id/name"
    text: "Rogoz from Contacts Anamaria"
#- assertVisible:
#    id: "net.thunderbird.android.beta:id/name"
#    text: "me"

## Remove contacts
- runFlow:
    file: ../shared/remove_contact.yml
    env:
      NAME: Anamaria
#- runFlow:
#    file: ../shared/remove_contact.yml
#    env:
#      NAME: me

## Close message
- tapOn:
    id: "com.android.systemui:id/back"
- tapOn: "Navigate up"
