appId: com.fsck.k9.debug
---
- launchApp:
    clearState: true

- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_email"
- inputText: "fun@k9mail.example"
- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_description"
- inputText: "Personal"
- tapOn:
    id: "com.fsck.k9.debug:id/account_name"
- inputText: "Demo User"
- tapOn:
    id: "com.fsck.k9.debug:id/done"

- tapOn:
    id: "com.android.permissioncontroller:id/permission_allow_button"

- tapOn: "Navigate up"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/drawer_one_account"

- tapOn: "Settings"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/settings_one_account"

- tapOn: "Add account"

- tapOn:
    id: "com.fsck.k9.debug:id/account_email"
- inputText: "serious@k9mail.example"
- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_description"
- inputText: "Work"
- tapOn:
    id: "com.fsck.k9.debug:id/done"

- tapOn: "Navigate up"
- tapOn: "Manage folders"

- tapOn: "Inbox"
- tapOn: "Unify"
- back

- tapOn: "Turing Awards"
- tapOn: "Unify"
- back
- back

- tapOn: "Navigate up"
- tapOn: "Turing Awards"
- swipe:
    direction: DOWN

- back

- tapOn:
    id: "com.fsck.k9.debug:id/contact_picture"
    index: 0
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 1
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 2
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 3
- tapOn:
    id: "com.fsck.k9.debug:id/delete"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/unified_inbox"

- tapOn: "Navigate up"
- tapOn:
    id: "com.fsck.k9.debug:id/material_drawer_account_header_text_switcher"
- tapOn: "Personal"
- back

- tapOn: "Navigate up"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/drawer_two_accounts"

- tapOn:
    id: "com.fsck.k9.debug:id/material_drawer_account_header_text_switcher"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/drawer_account_list"

- tapOn:
    id: "com.fsck.k9.debug:id/material_drawer_account_header_text_switcher"

- tapOn: "Settings"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/settings_two_accounts"

- tapOn: "Work"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/account_settings"

- tapOn: "More options"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/account_settings_menu_expanded"
