appId: com.fsck.k9.debug
---
- launchApp:
    clearState: true

- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_email"
- inputText: "fun@k9mail.example"
- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_description"
- inputText: "Personal"
- tapOn:
    id: "com.fsck.k9.debug:id/account_name"
- inputText: "Demo User"
- tapOn:
    id: "com.fsck.k9.debug:id/done"

- tapOn:
    id: "com.android.permissioncontroller:id/permission_allow_button"

- tapOn: "Navigate up"
- tapOn: "Settings"
- tapOn: "Add account"

- tapOn:
    id: "com.fsck.k9.debug:id/account_email"
- inputText: "serious@k9mail.example"
- tapOn:
    id: "com.fsck.k9.debug:id/next"

- tapOn:
    id: "com.fsck.k9.debug:id/account_description"
- inputText: "Work"
- tapOn:
    id: "com.fsck.k9.debug:id/done"

- tapOn: "Navigate up"
- tapOn: "Turing Awards"
- swipe:
    direction: DOWN


- tapOn: "More options"
- tapOn:
    id: "com.fsck.k9.debug:id/title"
    index: 1
- tapOn:
    id: "android:id/button1"
- tapOn:
    id: "com.fsck.k9.debug:id/contact_picture"
    index: 0
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 1
- tapOn: "Mark unread"

- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 2

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/message_list_multi_select"

- back

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/reading_folder_view"

- scrollUntilVisible:
    element:
      id: "com.fsck.k9.debug:id/subject"
      text: "The Humble Programmer"
    direction: DOWN
    timeout: 5000
- tapOn: "The Humble Programmer"

- waitForAnimationToEnd
- takeScreenshot: "user-manual/screenshots/reading_email_view"
