appId: net.thunderbird.android.debug
---

- tapOn:
    id: "net.thunderbird.android.debug:id/participants_container"
- swipe:
    from:
      id: "net.thunderbird.android.debug:id/message_details_list"
    direction: UP
- swipe:
    from:
      id: "net.thunderbird.android.debug:id/message_details_list"
    direction: DOWN
    duration: 200
