appId: com.fsck.k9.debug
---
- runFlow: ../shared/login_demo_account.yml

## Open message
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 0
    text: "Message details demo"

## Check message
- assertVisible:
    id: "com.fsck.k9.debug:id/from"
    text: "Alice"
- assertVisible:
    id: "com.fsck.k9.debug:id/recipient_names"
    text: "to User 1.*"

### Open message details
- runFlow: ../shared/open_message_details.yml

## Check message details
- assertVisible:
    id: "com.fsck.k9.debug:id/name"
    text: "Alice"
- assertVisible:
    id: "com.fsck.k9.debug:id/name"
    text: "User 1"

## Add contacts
- runFlow:
    file: ../shared/add_contact.yml
    env:
      INDEX: 0
      NAME: Alice
      FIRST_NAME: Alice
- runFlow:
    file: ../shared/add_contact.yml
    env:
      INDEX: 4
      NAME: User 1
      FIRST_NAME: User

## Close message
- tapOn:
    id: "com.android.systemui:id/back"
- tapOn:
    id: "com.android.systemui:id/back"

## Change settings
- runFlow: ../shared/change_display_settings_show_contact_names.yml

## Open message
- tapOn:
    id: "com.fsck.k9.debug:id/subject"
    index: 0
    text: "Message details demo"

## Check message
- assertVisible:
    id: "com.fsck.k9.debug:id/from"
    text: "Alice from Contacts"
- assertVisible:
    id: "com.fsck.k9.debug:id/recipient_names"
    text: "to User from Contacts.*"

### Open message details
- runFlow: ../shared/open_message_details.yml

## Check message details
- assertVisible:
    id: "com.fsck.k9.debug:id/name"
    text: "Alice from Contacts"
- assertVisible:
    id: "com.fsck.k9.debug:id/name"
    text: "User from Contacts 1"

## Remove contacts
- runFlow:
    file: ../shared/remove_contact.yml
    env:
      NAME: Alice from Contacts

- runFlow:
    file: ../shared/remove_contact.yml
    env:
      NAME: User from Contacts 1

## Close message
- tapOn:
    id: "com.android.systemui:id/back"
- tapOn: "Navigate up"
